[package]
name = "timely-viz"
version = "0.1.0"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]


[dependencies]
abomonation = { git = "https://github.com/frankmcsherry/abomonation" }
abomonation_derive = "0.3"
#timely_communication = "^0.6"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow", branch = "logging_revamp" }
differential-dataflow = { git = "https://github.com/frankmcsherry/differential-dataflow", branch = "logging" }
fnv="1.0.2"
futures = "^0.1"
actix = "^0.5"
actix-web = "^0.6"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
