[package]
name = "timely-viz"
version = "0.1.0"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]


[dependencies]
abomonation = "0.7"
abomonation_derive = "0.3"
timely_communication = "^0.8"
#timely = "^0.8"
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
#differential-dataflow = "^0.8"
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
fnv="1.0.2"
futures = "^0.1"
actix = "^0.5"
actix-web = "^0.6"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
